<resources>
    <string name="app_name">DiveLogbookOffline</string>
    <string name="bottom_time_mins">Bottom time (mins)</string>
    <string name="dive_name">Dive name</string>
    <string name="date">Date</string>
    <string name="max_depth_m">Max depth (m)</string>
    <string name="save">Save</string>

    <string name="add_dive">Add Dive</string>
    <string name="dive_site">Dive site</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>